Redo wrap-avoidance: don't copy entire document, and less DOM badness
Id is the wrong thing here, because there are more than one of them.
Class is right.

--- a/htdocs/static/default.css
+++ b/htdocs/static/default.css
@@ -182,3 +182,6 @@ unless explicitly overridden.*/
 
 div#keeptogether {page-break-inside:avoid;}
 
+.objavi-no-page-break {
+  page-break-inside: avoid;
+}
